ProductCard: Fix layout shift.

--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -10,7 +10,7 @@
     gap: calc(var(--block-spacer-small) / 2);
 
     height: 100%;
-    min-height: 37.5rem;
+    min-height: 38.5rem;
     width: 100%;
     min-width: var(--component-product-card-width);
     padding: calc(var(--block-padding) - var(--block-border-width));
